// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"DateTimePickerField" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

.emotion-2 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) minmax(0, 140px);
  gap: 12px;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (max-width: 520px) {
  .emotion-2 {
    grid-template-columns: minmax(0, 1fr);
  }
}

.emotion-3 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-3 .react-aria-DatePicker {
  width: 100%;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 .react-aria-Group {
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
}

.emotion-3:focus-within label {
  color: #0667c8;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  box-sizing: border-box;
  min-height: 48px;
  padding: 10px 14px;
  border-radius: 14px;
  border: 1px solid #dce0e3;
  background-color: #fff;
}

.emotion-4[data-focus-visible] {
  border-color: #0667c8;
}

.react-aria-DatePicker[data-open] .emotion-4 {
  border-color: #0667c8;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0;
  font-size: 0.875rem;
  color: rgb(29, 30, 31);
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  width: 100%;
}

.emotion-6 {
  padding: 2px 0;
  border-radius: 6px;
  margin: 0;
}

.emotion-6[data-type="literal"] {
  padding: 0;
  margin: 0;
}

.emotion-6[data-placeholder] {
  color: rgb(80, 82, 84);
}

.emotion-6[data-focused] {
  background-color: #edeff0;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 10px;
  border: 1px solid transparent;
  background: transparent;
  color: rgb(29, 30, 31);
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11:hover,
.emotion-11[data-focus-visible] {
  background-color: #edeff0;
}

.emotion-12 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  width: 18px;
  height: 18px;
}

.emotion-13 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
}

.emotion-13:focus-within label {
  color: #0667c8;
}

.emotion-13>div[data-uie-name] {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  max-width: 100%;
}

.emotion-14 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-15 {
  margin-bottom: 20px;
  width: 100%;
}

.emotion-15:focus-within label {
  color: #0667c8;
}

.emotion-16>div {
  height: 48px;
  min-height: 48px;
  position: relative;
  width: 100%;
  min-width: 0;
  border-radius: 14px;
}

.emotion-16>div:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-17 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0 16px;
  height: 48px;
  min-height: 48px;
  background: #fff;
  border: none;
  border-radius: 14px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 400;
  line-height: 1.5rem;
  outline: none;
  width: 100%;
  cursor: pointer;
  min-width: 0;
}

.emotion-19::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
  opacity: 1;
}

.emotion-19::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover);
}

.emotion-19:focus-visible,
.emotion-19:focus,
.emotion-19:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-19:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3;
}

.emotion-19:-webkit-autofill {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
  -webkit-text-fill-color: rgb(29, 30, 31);
}

.emotion-19:-webkit-autofill:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover),0 0 0 24px #e7f0fa inset;
}

.emotion-19:-webkit-autofill:focus-visible,
.emotion-19:-webkit-autofill:focus,
.emotion-19:-webkit-autofill:active {
  box-shadow: 0 0 0 1px #0667c8,0 0 0 24px #e7f0fa inset;
}

.emotion-19:-webkit-autofill:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
}

.emotion-19:focus:visible,
.emotion-19 active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-21 {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: rgb(29, 30, 31);
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.emotion-22 {
  background: 0;
  border: 0;
  caret-color: transparent;
  font-size: inherit;
  grid-area: 1/1/2/3;
  outline: 0;
  padding: 0;
  width: 1px;
  color: transparent;
  left: -100px;
  opacity: 0;
  position: relative;
  -webkit-transform: scale(.01);
  -moz-transform: scale(.01);
  -ms-transform: scale(.01);
  transform: scale(.01);
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-24 {
  display: none;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.emotion-25:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-26 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  margin-top: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    data-uie-name="datetime-picker-test"
  >
    <div
      className="emotion-2"
      role="group"
    >
      <div
        className="emotion-3"
        data-uie-name="datetime-picker-test-date"
      >
        <div
          className="react-aria-DatePicker"
          data-rac=""
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            aria-describedby="react-aria-description-0"
            aria-disabled={null}
            aria-label="Select date"
            aria-labelledby="datetime-picker-test-date"
            className="emotion-4"
            data-rac=""
            data-react-aria-pressable={true}
            id="datetime-picker-test-date"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="group"
          >
            <div
              className="emotion-5"
              data-rac=""
              data-react-aria-pressable={true}
              id="react-aria-:r2:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="presentation"
              style={
                {
                  "unicodeBidi": "isolate",
                }
              }
            >
              <span
                aria-describedby="react-aria-description-0"
                aria-label="Tag, Select date"
                aria-valuemax={31}
                aria-valuemin={1}
                aria-valuenow={15}
                aria-valuetext="15"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="day"
                enterKeyHint="next"
                id="react-aria-:rd:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                15
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Monat, Select date"
                aria-valuemax={12}
                aria-valuemin={1}
                aria-valuenow={6}
                aria-valuetext="6 – Juni"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="month"
                enterKeyHint="next"
                id="react-aria-:rh:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                6
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Jahr, Select date"
                aria-valuemax={9999}
                aria-valuemin={1}
                aria-valuenow={2026}
                aria-valuetext="2026"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="year"
                enterKeyHint="next"
                id="react-aria-:rl:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                2026
              </span>
            </div>
            <input
              data-rac=""
              disabled={false}
              hidden={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              type="text"
              value="2026-06-15"
            />
            <button
              aria-describedby="react-aria-description-0"
              aria-expanded={false}
              aria-haspopup="dialog"
              aria-label="Open calendar"
              aria-labelledby="react-aria-:r0: datetime-picker-test-date"
              className="emotion-11"
              data-rac=""
              data-react-aria-pressable={true}
              disabled={false}
              id="react-aria-:r0:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="emotion-12"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M5.2 1v2.8M10.8 1v2.8M12.9 2.4H3.1a1.4 1.4 0 0 0-1.4 1.4v9.8A1.4 1.4 0 0 0 3.1 15h9.8a1.4 1.4 0 0 0 1.4-1.4V3.8a1.4 1.4 0 0 0-1.4-1.4M1.7 6.6h12.6"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          data-a11y-ignore="aria-hidden-focus"
          data-react-aria-prevent-focus={true}
          data-testid="hidden-dateinput-container"
          style={
            {
              "border": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": "1px",
              "left": 0,
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "fixed",
              "top": 0,
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
        >
          <input
            disabled={false}
            form=""
            onChange={[Function]}
            step={60}
            tabIndex={-1}
            type="date"
            value="2026-06-15"
          />
        </div>
      </div>
      <div
        className="emotion-13"
        data-uie-name="datetime-picker-test-time"
      >
        <label
          className="emotion-14"
          htmlFor="datetime-picker-test-time"
          id="datetime-picker-test-time-label"
        >
          Select time
        </label>
        <div
          autoFocus={false}
          className="emotion-15"
          data-uie-name="datetime-picker-test-time"
        >
          <div
            className="emotion-16"
            onKeyDown={[Function]}
          >
            <div
              tabIndex={0}
            >
              <span
                className="emotion-17"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="emotion-17"
                role="log"
              />
              <div
                className="emotion-19"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="emotion-20"
                >
                  <div
                    className="emotion-21"
                  >
                    3:00 PM
                  </div>
                   
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-readonly={true}
                    className="emotion-22"
                    disabled={false}
                    id="datetime-picker-test-time"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={-1}
                    value=""
                  />
                </div>
                <div
                  className="emotion-23"
                >
                  <span
                    className="emotion-24"
                  />
                  <div
                    aria-hidden="true"
                    className="emotion-25"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      className="emotion-26"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <g>
                        <path
                          d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`"DateTimePickerField" renders as disabled 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

.emotion-2 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) minmax(0, 140px);
  gap: 12px;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (max-width: 520px) {
  .emotion-2 {
    grid-template-columns: minmax(0, 1fr);
  }
}

.emotion-3 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-3 .react-aria-DatePicker {
  width: 100%;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 .react-aria-Group {
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
}

.emotion-3:focus-within label {
  color: #0667c8;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  box-sizing: border-box;
  min-height: 48px;
  padding: 10px 14px;
  border-radius: 14px;
  border: 1px solid #dce0e3;
  background-color: #fff;
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4[data-focus-visible] {
  border-color: #0667c8;
}

.react-aria-DatePicker[data-open] .emotion-4 {
  border-color: #0667c8;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0;
  font-size: 0.875rem;
  color: rgb(29, 30, 31);
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  width: 100%;
}

.emotion-6 {
  padding: 2px 0;
  border-radius: 6px;
  margin: 0;
}

.emotion-6[data-type="literal"] {
  padding: 0;
  margin: 0;
}

.emotion-6[data-placeholder] {
  color: rgb(80, 82, 84);
}

.emotion-6[data-focused] {
  background-color: #edeff0;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 10px;
  border: 1px solid transparent;
  background: transparent;
  color: rgb(29, 30, 31);
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11:hover,
.emotion-11[data-focus-visible] {
  background-color: #edeff0;
}

.emotion-12 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  width: 18px;
  height: 18px;
}

.emotion-13 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
}

.emotion-13:focus-within label {
  color: #0667c8;
}

.emotion-13>div[data-uie-name] {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  max-width: 100%;
}

.emotion-14 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-15 {
  margin-bottom: 20px;
  width: 100%;
}

.emotion-15:focus-within label {
  color: #0667c8;
}

.emotion-16>div {
  height: 48px;
  min-height: 48px;
  position: relative;
  width: 100%;
  min-width: 0;
  border-radius: 14px;
}

.emotion-16>div:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-17 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0 16px;
  height: 48px;
  min-height: 48px;
  background: #edeff0;
  border: none;
  border-radius: 14px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: #676b71;
  font-weight: 400;
  line-height: 1.5rem;
  outline: none;
  width: 100%;
  background-color: #edeff0;
  min-width: 0;
}

.emotion-19::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
  opacity: 1;
}

.emotion-19::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19:focus-visible,
.emotion-19:focus,
.emotion-19:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-19:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3;
}

.emotion-19:-webkit-autofill {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
  -webkit-text-fill-color: rgb(29, 30, 31);
}

.emotion-19:-webkit-autofill:focus-visible,
.emotion-19:-webkit-autofill:focus,
.emotion-19:-webkit-autofill:active {
  box-shadow: 0 0 0 1px #0667c8,0 0 0 24px #e7f0fa inset;
}

.emotion-19:-webkit-autofill:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-21 {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: rgb(80, 82, 84);
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.emotion-22 {
  background: 0;
  border: 0;
  caret-color: transparent;
  font-size: inherit;
  grid-area: 1/1/2/3;
  outline: 0;
  padding: 0;
  width: 1px;
  color: transparent;
  left: -100px;
  opacity: 0;
  position: relative;
  -webkit-transform: scale(.01);
  -moz-transform: scale(.01);
  -ms-transform: scale(.01);
  transform: scale(.01);
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-24 {
  display: none;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.emotion-25:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-25>svg {
  fill: rgb(80, 82, 84);
}

.emotion-26 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  margin-top: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    data-uie-name="datetime-picker-test"
  >
    <div
      className="emotion-2"
      role="group"
    >
      <div
        className="emotion-3"
        data-uie-name="datetime-picker-test-date"
      >
        <div
          className="react-aria-DatePicker"
          data-disabled={true}
          data-rac=""
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            aria-describedby="react-aria-description-0"
            aria-disabled={true}
            aria-label="Select date"
            aria-labelledby="datetime-picker-test-date"
            className="emotion-4"
            data-disabled={true}
            data-rac=""
            data-react-aria-pressable={true}
            id="datetime-picker-test-date"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="group"
          >
            <div
              className="emotion-5"
              data-disabled={true}
              data-rac=""
              data-react-aria-pressable={true}
              id="react-aria-:r2d:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="presentation"
              style={
                {
                  "unicodeBidi": "isolate",
                }
              }
            >
              <span
                aria-describedby="react-aria-description-0"
                aria-disabled={true}
                aria-label="Tag, Select date"
                aria-valuemax={31}
                aria-valuemin={1}
                aria-valuenow={15}
                aria-valuetext="15"
                className="emotion-6"
                contentEditable={false}
                data-disabled={true}
                data-rac=""
                data-type="day"
                id="react-aria-:r2o:"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={false}
              >
                15
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-disabled={true}
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-disabled={true}
                aria-label="Monat, Select date"
                aria-valuemax={12}
                aria-valuemin={1}
                aria-valuenow={6}
                aria-valuetext="6 – Juni"
                className="emotion-6"
                contentEditable={false}
                data-disabled={true}
                data-rac=""
                data-type="month"
                id="react-aria-:r2s:"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={false}
              >
                6
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-disabled={true}
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-disabled={true}
                aria-label="Jahr, Select date"
                aria-valuemax={9999}
                aria-valuemin={1}
                aria-valuenow={2026}
                aria-valuetext="2026"
                className="emotion-6"
                contentEditable={false}
                data-disabled={true}
                data-rac=""
                data-type="year"
                id="react-aria-:r30:"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={false}
              >
                2026
              </span>
            </div>
            <input
              data-disabled={true}
              data-rac=""
              disabled={true}
              hidden={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              type="text"
              value="2026-06-15"
            />
            <button
              aria-describedby="react-aria-description-0"
              aria-expanded={false}
              aria-haspopup="dialog"
              aria-label="Open calendar"
              aria-labelledby="react-aria-:r2b: datetime-picker-test-date"
              className="emotion-11"
              data-disabled={true}
              data-rac=""
              data-react-aria-pressable={true}
              disabled={true}
              id="react-aria-:r2b:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="emotion-12"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M5.2 1v2.8M10.8 1v2.8M12.9 2.4H3.1a1.4 1.4 0 0 0-1.4 1.4v9.8A1.4 1.4 0 0 0 3.1 15h9.8a1.4 1.4 0 0 0 1.4-1.4V3.8a1.4 1.4 0 0 0-1.4-1.4M1.7 6.6h12.6"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          data-a11y-ignore="aria-hidden-focus"
          data-react-aria-prevent-focus={true}
          data-testid="hidden-dateinput-container"
          style={
            {
              "border": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": "1px",
              "left": 0,
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "fixed",
              "top": 0,
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
        >
          <input
            disabled={true}
            form=""
            onChange={[Function]}
            step={60}
            tabIndex={-1}
            type="date"
            value="2026-06-15"
          />
        </div>
      </div>
      <div
        className="emotion-13"
        data-uie-name="datetime-picker-test-time"
      >
        <label
          className="emotion-14"
          htmlFor="datetime-picker-test-time"
          id="datetime-picker-test-time-label"
        >
          Select time
        </label>
        <div
          autoFocus={false}
          className="emotion-15"
          data-uie-name="datetime-picker-test-time"
        >
          <div
            className="emotion-16"
            onKeyDown={[Function]}
          >
            <div
              tabIndex={0}
            >
              <span
                className="emotion-17"
                id="react-select-5-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="emotion-17"
                role="log"
              />
              <div
                aria-disabled={true}
                className="emotion-19"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="emotion-20"
                >
                  <div
                    className="emotion-21"
                  >
                    3:00 PM
                  </div>
                   
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-readonly={true}
                    className="emotion-22"
                    disabled={true}
                    id="datetime-picker-test-time"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={-1}
                    value=""
                  />
                </div>
                <div
                  className="emotion-23"
                >
                  <span
                    className="emotion-24"
                  />
                  <div
                    aria-hidden="true"
                    className="emotion-25"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      className="emotion-26"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <g>
                        <path
                          d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`"DateTimePickerField" renders as invalid 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

.emotion-2 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) minmax(0, 140px);
  gap: 12px;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (max-width: 520px) {
  .emotion-2 {
    grid-template-columns: minmax(0, 1fr);
  }
}

.emotion-3 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-3 .react-aria-DatePicker {
  width: 100%;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 .react-aria-Group {
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
}

.emotion-3:focus-within label {
  color: #0667c8;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  box-sizing: border-box;
  min-height: 48px;
  padding: 10px 14px;
  border-radius: 14px;
  border: 1px solid #dce0e3;
  background-color: #fff;
  border-color: var(--danger-color);
  box-shadow: none;
  outline: none;
}

.emotion-4[data-focus-visible] {
  border-color: #0667c8;
}

.react-aria-DatePicker[data-open] .emotion-4 {
  border-color: #0667c8;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0;
  font-size: 0.875rem;
  color: rgb(29, 30, 31);
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  width: 100%;
}

.emotion-6 {
  padding: 2px 0;
  border-radius: 6px;
  margin: 0;
}

.emotion-6[data-type="literal"] {
  padding: 0;
  margin: 0;
}

.emotion-6[data-placeholder] {
  color: rgb(80, 82, 84);
}

.emotion-6[data-focused] {
  background-color: #edeff0;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 10px;
  border: 1px solid transparent;
  background: transparent;
  color: rgb(29, 30, 31);
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11:hover,
.emotion-11[data-focus-visible] {
  background-color: #edeff0;
}

.emotion-12 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  width: 18px;
  height: 18px;
}

.emotion-13 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
}

.emotion-13:focus-within label {
  color: #0667c8;
}

.emotion-13>div[data-uie-name] {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  max-width: 100%;
}

.emotion-14 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-15 {
  margin-bottom: 2px;
  width: 100%;
}

.emotion-15:focus-within label {
  color: #0667c8;
}

.emotion-16>div {
  height: 48px;
  min-height: 48px;
  position: relative;
  width: 100%;
  min-width: 0;
  border-radius: 14px;
}

.emotion-16>div:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-17 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0 16px;
  height: 48px;
  min-height: 48px;
  background: #fff;
  border: none;
  border-radius: 14px;
  box-shadow: 0 0 0 1px var(--danger-color);
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 400;
  line-height: 1.5rem;
  outline: none;
  width: 100%;
  cursor: pointer;
  min-width: 0;
}

.emotion-19::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
  opacity: 1;
}

.emotion-19::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-19:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover);
}

.emotion-19:focus-visible,
.emotion-19:focus,
.emotion-19:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-19:-webkit-autofill {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
  -webkit-text-fill-color: rgb(29, 30, 31);
}

.emotion-19:-webkit-autofill:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover),0 0 0 24px #e7f0fa inset;
}

.emotion-19:-webkit-autofill:focus-visible,
.emotion-19:-webkit-autofill:focus,
.emotion-19:-webkit-autofill:active {
  box-shadow: 0 0 0 1px #0667c8,0 0 0 24px #e7f0fa inset;
}

.emotion-19:focus:visible,
.emotion-19 active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-21 {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: rgb(29, 30, 31);
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.emotion-22 {
  background: 0;
  border: 0;
  caret-color: transparent;
  font-size: inherit;
  grid-area: 1/1/2/3;
  outline: 0;
  padding: 0;
  width: 1px;
  color: transparent;
  left: -100px;
  opacity: 0;
  position: relative;
  -webkit-transform: scale(.01);
  -moz-transform: scale(.01);
  -ms-transform: scale(.01);
  transform: scale(.01);
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-24 {
  display: none;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.emotion-25:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-26 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  margin-top: 4px;
}

.emotion-27 {
  font-size: 0.75rem;
  color: var(--danger-color);
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    data-uie-name="datetime-picker-test"
  >
    <div
      className="emotion-2"
      role="group"
    >
      <div
        className="emotion-3"
        data-uie-name="datetime-picker-test-date"
      >
        <div
          className="react-aria-DatePicker"
          data-rac=""
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            aria-describedby="react-aria-description-0"
            aria-disabled={null}
            aria-label="Select date"
            aria-labelledby="datetime-picker-test-date"
            className="emotion-4"
            data-rac=""
            data-react-aria-pressable={true}
            id="datetime-picker-test-date"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="group"
          >
            <div
              className="emotion-5"
              data-rac=""
              data-react-aria-pressable={true}
              id="react-aria-:r1k:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="presentation"
              style={
                {
                  "unicodeBidi": "isolate",
                }
              }
            >
              <span
                aria-describedby="react-aria-description-0"
                aria-label="Tag, Select date"
                aria-valuemax={31}
                aria-valuemin={1}
                aria-valuenow={15}
                aria-valuetext="15"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="day"
                enterKeyHint="next"
                id="react-aria-:r1v:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                15
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Monat, Select date"
                aria-valuemax={12}
                aria-valuemin={1}
                aria-valuenow={6}
                aria-valuetext="6 – Juni"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="month"
                enterKeyHint="next"
                id="react-aria-:r23:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                6
              </span>
              <span
                aria-hidden={true}
                className="emotion-6"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Jahr, Select date"
                aria-valuemax={9999}
                aria-valuemin={1}
                aria-valuenow={2026}
                aria-valuetext="2026"
                autoCorrect="off"
                className="emotion-6"
                contentEditable={true}
                data-rac=""
                data-type="year"
                enterKeyHint="next"
                id="react-aria-:r27:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                2026
              </span>
            </div>
            <input
              data-rac=""
              disabled={false}
              hidden={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              type="text"
              value="2026-06-15"
            />
            <button
              aria-describedby="react-aria-description-0"
              aria-expanded={false}
              aria-haspopup="dialog"
              aria-label="Open calendar"
              aria-labelledby="react-aria-:r1i: datetime-picker-test-date"
              className="emotion-11"
              data-rac=""
              data-react-aria-pressable={true}
              disabled={false}
              id="react-aria-:r1i:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="emotion-12"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M5.2 1v2.8M10.8 1v2.8M12.9 2.4H3.1a1.4 1.4 0 0 0-1.4 1.4v9.8A1.4 1.4 0 0 0 3.1 15h9.8a1.4 1.4 0 0 0 1.4-1.4V3.8a1.4 1.4 0 0 0-1.4-1.4M1.7 6.6h12.6"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          data-a11y-ignore="aria-hidden-focus"
          data-react-aria-prevent-focus={true}
          data-testid="hidden-dateinput-container"
          style={
            {
              "border": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": "1px",
              "left": 0,
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "fixed",
              "top": 0,
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
        >
          <input
            disabled={false}
            form=""
            onChange={[Function]}
            step={60}
            tabIndex={-1}
            type="date"
            value="2026-06-15"
          />
        </div>
      </div>
      <div
        className="emotion-13"
        data-uie-name="datetime-picker-test-time"
      >
        <label
          className="emotion-14"
          htmlFor="datetime-picker-test-time"
          id="datetime-picker-test-time-label"
        >
          Select time
        </label>
        <div
          autoFocus={false}
          className="emotion-15"
          data-uie-name="datetime-picker-test-time"
        >
          <div
            className="emotion-16"
            onKeyDown={[Function]}
          >
            <div
              tabIndex={0}
            >
              <span
                className="emotion-17"
                id="react-select-4-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="emotion-17"
                role="log"
              />
              <div
                className="emotion-19"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="emotion-20"
                >
                  <div
                    className="emotion-21"
                  >
                    3:00 PM
                  </div>
                   
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-readonly={true}
                    className="emotion-22"
                    disabled={false}
                    id="datetime-picker-test-time"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={-1}
                    value=""
                  />
                </div>
                <div
                  className="emotion-23"
                >
                  <span
                    className="emotion-24"
                  />
                  <div
                    aria-hidden="true"
                    className="emotion-25"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      className="emotion-26"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <g>
                        <path
                          d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      className="emotion-27"
    >
      Please select a future date and time.
    </p>
  </div>
</div>
`;

exports[`"DateTimePickerField" renders with label 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1rem;
  color: #54585f;
  margin-bottom: 2px;
  display: block;
}

.emotion-3 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) minmax(0, 140px);
  gap: 12px;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (max-width: 520px) {
  .emotion-3 {
    grid-template-columns: minmax(0, 1fr);
  }
}

.emotion-4 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-4 .react-aria-DatePicker {
  width: 100%;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .react-aria-Group {
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
}

.emotion-4:focus-within label {
  color: #0667c8;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  box-sizing: border-box;
  min-height: 48px;
  padding: 10px 14px;
  border-radius: 14px;
  border: 1px solid #dce0e3;
  background-color: #fff;
}

.emotion-5[data-focus-visible] {
  border-color: #0667c8;
}

.react-aria-DatePicker[data-open] .emotion-5 {
  border-color: #0667c8;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0;
  font-size: 0.875rem;
  color: rgb(29, 30, 31);
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  width: 100%;
}

.emotion-7 {
  padding: 2px 0;
  border-radius: 6px;
  margin: 0;
}

.emotion-7[data-type="literal"] {
  padding: 0;
  margin: 0;
}

.emotion-7[data-placeholder] {
  color: rgb(80, 82, 84);
}

.emotion-7[data-focused] {
  background-color: #edeff0;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 10px;
  border: 1px solid transparent;
  background: transparent;
  color: rgb(29, 30, 31);
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-12:hover,
.emotion-12[data-focus-visible] {
  background-color: #edeff0;
}

.emotion-13 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  width: 18px;
  height: 18px;
}

.emotion-14 {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
}

.emotion-14:focus-within label {
  color: #0667c8;
}

.emotion-14>div[data-uie-name] {
  margin-bottom: 0;
  width: 100%;
  min-width: 0;
  max-width: 100%;
}

.emotion-15 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-16 {
  margin-bottom: 20px;
  width: 100%;
}

.emotion-16:focus-within label {
  color: #0667c8;
}

.emotion-17>div {
  height: 48px;
  min-height: 48px;
  position: relative;
  width: 100%;
  min-width: 0;
  border-radius: 14px;
}

.emotion-17>div:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-18 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0 16px;
  height: 48px;
  min-height: 48px;
  background: #fff;
  border: none;
  border-radius: 14px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 400;
  line-height: 1.5rem;
  outline: none;
  width: 100%;
  cursor: pointer;
  min-width: 0;
}

.emotion-20::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
  opacity: 1;
}

.emotion-20::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-20::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 1rem;
  text-transform: none;
}

.emotion-20:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover);
}

.emotion-20:focus-visible,
.emotion-20:focus,
.emotion-20:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-20:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3;
}

.emotion-20:-webkit-autofill {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
  -webkit-text-fill-color: rgb(29, 30, 31);
}

.emotion-20:-webkit-autofill:hover {
  box-shadow: 0 0 0 1px var(--text-input-border-hover),0 0 0 24px #e7f0fa inset;
}

.emotion-20:-webkit-autofill:focus-visible,
.emotion-20:-webkit-autofill:focus,
.emotion-20:-webkit-autofill:active {
  box-shadow: 0 0 0 1px #0667c8,0 0 0 24px #e7f0fa inset;
}

.emotion-20:-webkit-autofill:invalid:not(:focus, :hover) {
  box-shadow: 0 0 0 1px #dce0e3,0 0 0 24px #e7f0fa inset;
}

.emotion-20:focus:visible,
.emotion-20 active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-22 {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: rgb(29, 30, 31);
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.emotion-23 {
  background: 0;
  border: 0;
  caret-color: transparent;
  font-size: inherit;
  grid-area: 1/1/2/3;
  outline: 0;
  padding: 0;
  width: 1px;
  color: transparent;
  left: -100px;
  opacity: 0;
  position: relative;
  -webkit-transform: scale(.01);
  -moz-transform: scale(.01);
  -ms-transform: scale(.01);
  transform: scale(.01);
}

.emotion-24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-25 {
  display: none;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.emotion-26:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-27 {
  fill: rgb(29, 30, 31);
  overflow: visible;
  margin-top: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    data-uie-name="datetime-picker-test"
  >
    <label
      className="emotion-2"
      id="datetime-picker-test-label"
    >
      Starts at
    </label>
    <div
      aria-labelledby="datetime-picker-test-label"
      className="emotion-3"
      role="group"
    >
      <div
        className="emotion-4"
        data-uie-name="datetime-picker-test-date"
      >
        <div
          className="react-aria-DatePicker"
          data-rac=""
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            aria-describedby="react-aria-description-0"
            aria-disabled={null}
            aria-label="Select date"
            aria-labelledby="datetime-picker-test-date"
            className="emotion-5"
            data-rac=""
            data-react-aria-pressable={true}
            id="datetime-picker-test-date"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="group"
          >
            <div
              className="emotion-6"
              data-rac=""
              data-react-aria-pressable={true}
              id="react-aria-:rr:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="presentation"
              style={
                {
                  "unicodeBidi": "isolate",
                }
              }
            >
              <span
                aria-describedby="react-aria-description-0"
                aria-label="Tag, Select date"
                aria-valuemax={31}
                aria-valuemin={1}
                aria-valuenow={15}
                aria-valuetext="15"
                autoCorrect="off"
                className="emotion-7"
                contentEditable={true}
                data-rac=""
                data-type="day"
                enterKeyHint="next"
                id="react-aria-:r16:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                15
              </span>
              <span
                aria-hidden={true}
                className="emotion-7"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Monat, Select date"
                aria-valuemax={12}
                aria-valuemin={1}
                aria-valuenow={6}
                aria-valuetext="6 – Juni"
                autoCorrect="off"
                className="emotion-7"
                contentEditable={true}
                data-rac=""
                data-type="month"
                enterKeyHint="next"
                id="react-aria-:r1a:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                6
              </span>
              <span
                aria-hidden={true}
                className="emotion-7"
                data-rac=""
                data-type="literal"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                .
              </span>
              <span
                aria-label="Jahr, Select date"
                aria-valuemax={9999}
                aria-valuemin={1}
                aria-valuenow={2026}
                aria-valuetext="2026"
                autoCorrect="off"
                className="emotion-7"
                contentEditable={true}
                data-rac=""
                data-type="year"
                enterKeyHint="next"
                id="react-aria-:r1e:"
                inputMode="numeric"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onTouchStart={[Function]}
                role="spinbutton"
                spellCheck="false"
                style={
                  {
                    "caretColor": "transparent",
                  }
                }
                suppressContentEditableWarning={true}
                tabIndex={0}
              >
                2026
              </span>
            </div>
            <input
              data-rac=""
              disabled={false}
              hidden={true}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              type="text"
              value="2026-06-15"
            />
            <button
              aria-describedby="react-aria-description-0"
              aria-expanded={false}
              aria-haspopup="dialog"
              aria-label="Open calendar"
              aria-labelledby="react-aria-:rp: datetime-picker-test-date"
              className="emotion-12"
              data-rac=""
              data-react-aria-pressable={true}
              disabled={false}
              id="react-aria-:rp:"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="emotion-13"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M5.2 1v2.8M10.8 1v2.8M12.9 2.4H3.1a1.4 1.4 0 0 0-1.4 1.4v9.8A1.4 1.4 0 0 0 3.1 15h9.8a1.4 1.4 0 0 0 1.4-1.4V3.8a1.4 1.4 0 0 0-1.4-1.4M1.7 6.6h12.6"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          data-a11y-ignore="aria-hidden-focus"
          data-react-aria-prevent-focus={true}
          data-testid="hidden-dateinput-container"
          style={
            {
              "border": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": "1px",
              "left": 0,
              "margin": "-1px",
              "overflow": "hidden",
              "padding": 0,
              "position": "fixed",
              "top": 0,
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
        >
          <input
            disabled={false}
            form=""
            onChange={[Function]}
            step={60}
            tabIndex={-1}
            type="date"
            value="2026-06-15"
          />
        </div>
      </div>
      <div
        className="emotion-14"
        data-uie-name="datetime-picker-test-time"
      >
        <label
          className="emotion-15"
          htmlFor="datetime-picker-test-time"
          id="datetime-picker-test-time-label"
        >
          Select time
        </label>
        <div
          autoFocus={false}
          className="emotion-16"
          data-uie-name="datetime-picker-test-time"
        >
          <div
            className="emotion-17"
            onKeyDown={[Function]}
          >
            <div
              tabIndex={0}
            >
              <span
                className="emotion-18"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="emotion-18"
                role="log"
              />
              <div
                className="emotion-20"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="emotion-21"
                >
                  <div
                    className="emotion-22"
                  >
                    3:00 PM
                  </div>
                   
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-readonly={true}
                    className="emotion-23"
                    disabled={false}
                    id="datetime-picker-test-time"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={-1}
                    value=""
                  />
                </div>
                <div
                  className="emotion-24"
                >
                  <span
                    className="emotion-25"
                  />
                  <div
                    aria-hidden="true"
                    className="emotion-26"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      className="emotion-27"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <g>
                        <path
                          d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
